test/invalid-syntax/58170_invalidIdentifier/invalidIdentifier.agu
-- Author: 58170, Guilherme Sousa

let 1variable : Int = 10;
let main : Unit =
  print(1variable)